--- a/README
+++ b/README
@@ -12,7 +12,9 @@ A simple robot library for creating virtual display which can be used for runnin
 
 Requirements
 ------------
-* Python 2.7.3 (Newer versions not tested)
+* Python 2.7
+* Python 3.4
+* Python 3.5
 * Robot Framework 2.8
 * xvfbwrapper (python library)
 
